[package]
name = "BTrees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "BTrees"
path = "src/lib.rs"


[dependencies]
rand = "0.7.0"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
